<resources>
    <string name="app_name">Intentsproj</string>
    <string name="number_1">Number 1</string>
    <string name="number_2">Number 2</string>
    <string name="ok">OK</string>
    <string name="sub">-</string>
    <string name="add">+</string>
    <string name="mul">*</string>
    <string name="div">/</string>
    <string name="hello_world">Hello world</string>
    <string name="to">To</string>
    <string name="javatpoint_custom_toast">JavaTpoint custom Toast</string>
    <string name="textview">TextView</string>
</resources>
